Fix minor css spacing

--- a/style.css
+++ b/style.css
@@ -15,7 +15,12 @@ body {
 
 header {
   text-align: center;
-  padding-bottom: 1em;
+  padding: 1.25em;
+}
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 0.35em;
 }
 
 /* Color Picker */
@@ -45,12 +50,6 @@ header {
   background-color: transparent;
   border: none;
   cursor: pointer;
-}
-
-#picked-color::-webkit-color-swatch,
-#picked-color::-moz-color-swatch {
-  border-radius: 15px;
-  border: none;
 }
 
 #scheme-select {
@@ -173,18 +172,22 @@ header {
   .color-info {
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     padding: 0.5em;
+    margin-left: 1em;
   }
 
   .color-hex,
   .color-name {
     font-size: 1.1rem;
+    margin: 0.5em;
   }
 
   .color {
     height: 150px;
     width: 100%;
+    justify-content: start;
+    align-items: flex-start;
   }
 
   /* Show Copy Button Always on Small Screens */
